Fix z-index

--- a/resources/sass/partials/_select.scss
+++ b/resources/sass/partials/_select.scss
@@ -1,6 +1,9 @@
 .select {
 
 }
+.justselect-body-overlay {
+  z-index: -1 !important;
+}
 
 .justselect {
   &-wrapper {
